# SSM_UTF

./: .chickpea-cea-bs-22-03-2021.ini-deep-output.swp  .gitmodules  Makefile  Makefile.am  Makefile.in  README  TODO.txt  aclocal.m4  asd  chickpea-cea-bs-22-03-2021.ini  chickpea-cea-bs-22-03-2021.ini-deep-output  chickpea-ssm-snp.h5  config.h  config.status  configure  configure.ac  libtool  out-chickpea-ssm-snp-autumn-v032021.h5  out-chickpea-ssm-snp-spring.h5  out-chickpea-ssm-snp.h5  out-weather_ssm.h5
.deps/: ssm-functions-grammar.Po  ssm-main.Po  ssm-model_moc.Po
SSM_2018/: README.md  SSM_improved.vcxproj  chickpea-ssm-snp-autumn-v032021.h5  convert_2_utf.py  crops.ini.src  data.h  deep-src-1.ini-deep-output  functions-grammar.cc  functions-grammar.h  main.cpp  model.h  model_moc.cpp  nlreg.h  parametrs.h  ssm_stacked  test.ini-deep-output  test_with_crops_ini.ini-deep-output  weather_ssm.h5
SSM_2018/divided/: chickpea-ssm-snp-autumn.h5  chickpea-ssm-snp-spring.h5
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
h5patch/: patch_utf8_to_ascci.p0
nsis/: SSM.nsis  SSM.nsis.in  mingwbuild  mingwbuild.in
po/: Makefile  Makefile.in  POTFILES
